Adding Pytorch Inference code based on shaoanlu's

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -70,6 +70,7 @@
         "id": "rl_6PNRJ4YPW"
       },
       "source": [
+        "# Replce the file name with a model you have trained\n",
         "rev.load_state(\"./output/face_swap_5.json\")\n"
       ],
       "execution_count": null,
@@ -94,10 +95,13 @@
         "from detector.face_detector import MTCNNFaceDetector\n",
         "import numpy as np\n",
         "\n",
+        "\n",
+        "############ FIX TO WORK WITH COLAB #####################\n",
         "# save np.load\n",
         "np_load_old = np.load\n",
         "# modify the default parameters of np.load\n",
         "np.load = lambda *a,**k: np_load_old(*a, allow_pickle=True, **k)\n",
+        "#########################################################\n",
         "\n",
         "fd = MTCNNFaceDetector()\n",
         "vc = VideoConverter()\n",
@@ -163,7 +167,8 @@
         "    input_fn = fn_target_video\n",
         "    output_fn = \"output/B_to_A_test.mp4\"\n",
         "\n",
-        "duration =  (140,180) #(70,105) #(31,41)(41,65)(106,140) None or a non-negative float tuple: (start_sec, end_sec). Duration of input video to be converted"
+        "# Set the duration based on the clip you chose\n",
+        "duration =  (140,180) # None or a non-negative float tuple: (start_sec, end_sec). Duration of input video to be converted"
       ],
       "execution_count": null,
       "outputs": []
